force-app/main/default/objects/Inspection_Product_Item__c/Inspection_Product_Item__c.object-meta.xml
<CustomObject>
    <label>Inspection Product Item</label>
    <nameField>
        <label>Inspection Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspection Product Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>