force-app/main/default/objects/Inspection_Product_Item__c/fields/Inspection_Report__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Report</label>
    <referenceTo>Daily_Inspection_Report__c</referenceTo>
    <relationshipLabel>Inspection Product Items</relationshipLabel>
    <relationshipName>Inspection_Product_Items</relationshipName>
    <type>Lookup</type>
</CustomField>