force-app/main/default/objects/Inspection_Product_Item__c/fields/Patrol_Mode__c.field-meta.xml
<CustomField>
    <fullName>Patrol_Mode__c</fullName>
    <label>Patrol Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Routine</fullName>
            </value>
            <value>
                <fullName>Unite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>