force-app/main/default/objects/Inspection_Product_Item__c/fields/Product_Line_Checked__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>产品线复选框状态</description>
    <label>Product Line Checked</label>
    <type>Checkbox</type>
</CustomField>