force-app/main/default/objects/Inspection_Product_Item__c/fields/Product_Lines__c.field-meta.xml
<CustomField>
    <fullName>Product_Lines__c</fullName>
    <label>Product Lines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line</valueSetName>
    </valueSet>
</CustomField>